--- a/forgesample/index.html
+++ b/forgesample/index.html
@@ -12,15 +12,17 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
   <!-- Autodesk Forge Viewer files -->
-  <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/style.min.css?v=v4.0" type="text/css">
+  <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/style.min.css?v=v3.3" type="text/css">
   <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/three.min.js"></script>
-  <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.min.js?v=v4.0"></script>
+  <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.js?v=v3.3"></script>
   <!-- this project files -->
   <link href="css/main.css" rel="stylesheet" />
+  <link href="css/PushPinExtension.css" rel="stylesheet" />
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
   <script src="js/BIM360MarkupExtension.js"></script>
   <script src="js/BIM360IssueExtension.js"></script>
+  <script src="js/PushPinExtension.js"></script>
 </head>
 
 <body>
