--- a/bim360issues/wwwroot/index.html
+++ b/bim360issues/wwwroot/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <title>Autodesk Forge Tutorial</title>
+  <title>Autodesk Forge - BIM 360 Issues</title>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="https://github.com/Autodesk-Forge/bim360appstore-data.management-nodejs-transfer.storage/raw/master/www/favicon.ico">
   <!-- Common packages: jQuery, Bootstrap, jsTree -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -12,17 +13,14 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
   <!-- Autodesk Forge Viewer files -->
-  <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/style.min.css?v=v3.3" type="text/css">
-  <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/three.min.js"></script>
-  <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.js?v=v3.3"></script>
+  <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/style.min.css?v=v6.0" type="text/css">
+  <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.js?v=v6.0"></script>
   <!-- this project files -->
   <link href="css/main.css" rel="stylesheet" />
-  <link href="css/PushPinExtension.css" rel="stylesheet" />
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
   <script src="js/BIM360MarkupExtension.js"></script>
   <script src="js/BIM360IssueExtension.js"></script>
-  <script src="js/PushPinExtension.js"></script>
 </head>
 
 <body>
