--- a/bim360issues/wwwroot/index.html
+++ b/bim360issues/wwwroot/index.html
@@ -66,5 +66,5 @@
     </div>
   </div>
 </body>
-<iframe id="hiddenFrame" style="visibility: hidden" />
+<iframe id="hiddenFrame" style="visibility: hidden; display: none;" />
 </html>
