--- a/bim360issues/wwwroot/index.html
+++ b/bim360issues/wwwroot/index.html
@@ -76,7 +76,7 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Cancel">
             <span aria-hidden="true">&times;</span>
           </button>
-          <h4 class="modal-title">Thanks for using BIM 360 File Sharing!</h4>
+          <h4 class="modal-title">Thanks for using this sample!</h4>
         </div>
         <div class="modal-body">
           <p>To view your BIM 360 Docs files on this app please authorize my Forge Client ID with your BIM 360 Docs Account.
@@ -94,7 +94,7 @@
           </div>
           And this App Name:
           <div class="input-group">
-            <input type="text" readonly="true" aria-describedby="CopyAppName" id="AppName" class="form-control" value="BIM 360 Issues Sample"
+            <input type="text" readonly="true" aria-describedby="CopyAppName" id="AppName" class="form-control" value="BIM 360 Sample"
             />
             <span class="input-group-addon" style="cursor: pointer" data-clipboard-target="#AppName" id="CopyAppName">Copy to clipboard</span>
           </div>
