--- a/bim360issues/wwwroot/index.html
+++ b/bim360issues/wwwroot/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>Autodesk Forge - BIM 360 Issues</title>
+  <title>BIM 360 Issues Archives - BIM One Inc.</title>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="https://github.com/Autodesk-Forge/learn.forge.viewhubmodels/raw/master/img/favicon.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <!-- Common packages: jQuery, Bootstrap, jsTree -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
